--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "homepage": "https://github.com/phocassoftware/aws-sso-insomnia-plugin#readme",
   "devDependencies": {
+    "prettier": "2.3.2",
     "typescript": "^4.3.5"
   },
   "dependencies": {
