NG-486 - Caching Per Profile + Prettier + Readme (#2)
* Cache CredentialProvider Per Profile
* Implemented per profile caching of SSO credential providers
* Implemented per profile credential refresh
* Move to targeting es6 since Insomnia supports this

* * Added updated details to README.md plus screenshots
* Added prettier to the project as a dev dependency, and formatted accordingly

* * Exclude prettier config from the npm package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "insomnia-plugin-aws-sso",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "main": "dist/plugin.js",
   "types": "dist/plugin.d.ts",
   "description": "Reads from SSO populated AWS credentials for signing IAM V4 secured endpoints",
@@ -42,6 +42,7 @@
   },
   "homepage": "https://github.com/phocassoftware/aws-sso-insomnia-plugin#readme",
   "devDependencies": {
+    "prettier": "2.3.2",
     "typescript": "^4.3.5"
   },
   "dependencies": {
