--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@commitlint/config-conventional": "^13.1.0",
     "husky": "^7.0.2",
     "prettier": "2.3.2",
+    "pretty-quick": "^3.1.1",
     "semantic-release": "^17.4.7",
     "typescript": "^4.3.5"
   },
