--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "scripts": {
     "prepublish": "tsc",
     "build": "tsc",
+    "test": "jest",
     "prepare": "husky install"
   },
   "repository": {
@@ -45,10 +46,14 @@
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@types/jest": "^27.0.1",
     "husky": "^7.0.2",
+    "jest": "^27.1.0",
+    "jest-mock-extended": "^2.0.2-beta2",
     "prettier": "2.3.2",
     "pretty-quick": "^3.1.1",
     "semantic-release": "^17.4.7",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.3.5"
   },
   "dependencies": {
