ci: included semantic-release-dry step for validating PRs

--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -17,5 +17,10 @@ jobs:
           node-version: "14"
           cache: "npm"
       - run: npm install
-      - run: npm build
+      - run: npm run build
       - run: npm test
+      - name: Release Dry Run
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npm run semantic-release-dry
