--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
   },
   "scripts": {
     "prepublish": "tsc",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest",
+    "prepare": "husky install",
+    "semantic-release-dry": "semantic-release --dry-run",
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/phocassoftware/aws-sso-insomnia-plugin.git"
+    "url": "https://github.com/phocassoftware/aws-sso-insomnia-plugin.git"
   },
   "keywords": [
     "AWS",
@@ -42,10 +46,27 @@
   },
   "homepage": "https://github.com/phocassoftware/aws-sso-insomnia-plugin#readme",
   "devDependencies": {
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
+    "@types/jest": "^27.0.1",
+    "husky": "^7.0.2",
+    "jest": "^27.1.0",
+    "jest-mock-extended": "^2.0.2-beta2",
     "prettier": "2.3.2",
+    "pretty-quick": "^3.1.1",
+    "semantic-release": "^17.4.7",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.3.5"
   },
   "dependencies": {
     "@aws-sdk/credential-provider-sso": "^3.25.0"
+  },
+  "publishConfig": {
+    "access": "restricted"
+  },
+  "release": {
+    "branches": [
+      "main"
+    ]
   }
 }
