--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "@aws-sdk/credential-provider-sso": "^3.25.0"
   },
   "publishConfig": {
-    "access": "restricted"
+    "access": "public"
   },
   "release": {
     "branches": [
