fix: npm license description Changed npm package description to match MIT license

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "Insomnia"
   ],
   "author": "Phocas",
-  "license": "Unlicense (see LICENSE)",
+  "license": "MIT (see LICENSE)",
   "bugs": {
     "url": "https://github.com/phocassoftware/aws-sso-insomnia-plugin/issues"
   },
