--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,25 @@
 {
   "exclude": ["**/*.test.ts", "dist"],
   "compilerOptions": {
-    "target": "es6",
+    "target": "ES2020",
     "module": "commonjs",
     "declaration": true,
-    "outDir": "dist",
-    "rootDir": "src",
+
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
     "strict": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
-  }
+
+    "types": ["vitest/globals"]
+  },
+  "files": [],
+  "include": [],
+  "references": [
+    {
+      "path": "./tsconfig.build.json"
+    },
+    {
+      "path": "./tsconfig.spec.json"
+    }
+  ]
 }
