--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -14,9 +14,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: "14"
-          cache: "npm"
-      - run: npm install
+          node-version: 20
+          cache: npm
+      - run: npm ci
       - run: npm run build
       - run: npm test
       - name: Release Dry Run
